# py-aws-sso

./: .pdm-python  CHANGELOG.MD  LICENSE  README.md  awssso.py  pyproject.toml
.github/workflows/: python-publish.yml
awssso/: __awssso.py  __init__.py
example/: .pdm-python  local_run.py  pyproject.toml
