[project]
name = "example-aws-sso project"
version = "0.1.0"
description = "Example project using FastAPI using py-aws-sso library"
authors = [
    { name = "Pritam", email = "" },
]
dependencies = [
    "fastapi>=0.111.0",
    "fastapi-template>=3.3.10",
    "boto3>=1.34.113",
    "uvicorn>=0.30.1",
    "py-aws-sso>=0.1.0",
]
requires-python = "==3.12.*"
readme = "README.md"
license = { text = "MIT" }

[tool.pdm]
distribution = false

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
